--- a/exampleTasks.json
+++ b/exampleTasks.json
@@ -1,11 +1,11 @@
 [
     {
-        "content": "Ukończyć to zadanie",
+        "content": "Finish this task",
         "done": false,
         "id": "jot8ZwZDwAV69xsjcCPKX"
     },
     {
-        "content": "Ukończyć wszystkie zadania",
+        "content": "Finish all tasks",
         "done": false,
         "id": "XDywMZV4x8cWYW_BrvTS6"
     }
