--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kvasir124.github.io/to-do-list-react/",
+  "homepage": "https://wojdaSoftware.github.io/to-do-list-react/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
